<resources>
    <string name="app_name">Tools</string>


    <string name="home">Home</string>
    <string name="exchange">Exchange</string>
    <string name="treat">Treat</string>
    <string name="mine">Mine</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_anim">Anim</string>
    <string name="btn_anim_1">Anim1</string>
    <string name="btn_anim_2">Anim2</string>
</resources>
