<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.fai.tools.ui.anim.AnimActivity">

    <ImageView
        android:id="@+id/img"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:scaleType="centerCrop"
        android:src="@drawable/girl" />
    <ImageView
        android:id="@+id/img_1"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:scaleType="centerCrop"
        android:src="@drawable/girl" />
    <ImageView
        android:id="@+id/img_2"
        android:layout_width="150dp"
        android:layout_marginTop="30dp"
        android:layout_height="40dp"
        android:scaleType="centerCrop"
        android:src="@drawable/girl" />

    <Button
        android:id="@+id/btn_anim"
        android:layout_marginTop="100dp"
        android:text="@string/btn_anim"
        android:layout_width="120dp"
        android:layout_height="70dp" />
    <Button
        android:id="@+id/btn_anim_1"
        android:text="@string/btn_anim_1"
        android:layout_width="120dp"
        android:layout_height="70dp" />
    <Button
        android:id="@+id/btn_anim_2"
        android:text="@string/btn_anim_2"
        android:layout_width="120dp"
        android:layout_height="70dp" />
</LinearLayout>
